--- a/src/main/ng/demoui/src/app/app.component.html
+++ b/src/main/ng/demoui/src/app/app.component.html
@@ -2,5 +2,6 @@
 <nav>
   <a routerLink="/hello">hello</a>
   <a routerLink="/greeting">greeting</a>
+  <a routerLink="/new">new</a>
 </nav>
 <router-outlet></router-outlet>
