--- a/src/main/ng/demoui/src/app/app.component.html
+++ b/src/main/ng/demoui/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
-  <a routerLink="/hello">hello</a>
-  <a routerLink="/greeting">greeting</a>
-  <a routerLink="/new">new</a>
+  <a routerLink="/hello"><button>Hello Menu</button></a>
+  <a routerLink="/greeting"><button>Greeting Menu</button></a>
+  <a routerLink="/tree"><button>Tree Menu</button></a>
 </nav>
 <router-outlet></router-outlet>
